# Rust-1553-Simulator

./: .gitignore  Cargo.toml  LICENSE  README.md  run_sim.sh
.github/workflows/: ci.yml
assets/vhs/: bus-rts-demo.tape  tui-demo.tape
src/: lib.rs
src/app/: config.rs  mod.rs  run.rs  state.rs
src/app/tui/: command_panel.rs  input.rs  mod.rs  run.rs  ui.rs
src/devices/: mod.rs
src/devices/gps/: mod.rs  model.rs  rt.rs
src/devices/power/: mod.rs  model.rs  rt.rs
src/net/: bus.rs  bus_controller.rs  mod.rs  rt.rs
src/protocol/: cmd_word.rs  data_word.rs  message.rs  mod.rs  protocol_word.rs  status_word.rs  support.rs  transaction.rs
src/runtime/: mod.rs  scheduler.rs
