[package]
name = "milstd1553-sim"
version = "0.1.0"
edition = "2024"
description = "A Rust MIL-STD-1553 simulator featuring a bus controller, simulated remote terminals, and a terminal user interface."
license = "Apache-2.0"
repository = "https://github.com/jbm950/Rust-1553-Simulator"
homepage = "https://github.com/jbm950/Rust-1553-Simulator"
readme = "README.md"
keywords = ["mil-std-1553", "simulation", "networking", "tui"]

[dependencies]
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
